# AKS

./: .gitignore  COMMANDS.md  README.md  feature_extract.py  frame_select.py  install.bat  install.sh  pyproject.toml  requirements.txt
.cursor/rules/: project_rules.mdc
data/: extracted_improvable_negative_feedback_samples_main_fields.json
datasets/: longvideobench_val_i.yaml  longvideobench_val_v.yaml
datasets/videomme/: videomme.yaml
evaluation/: task.py
evaluation/scripts/: longvideobench_aks_llava_video_7b.sh  longvideobench_uni_llava_video_7b.sh  videomme_aks_llava_video_7b.sh  videomme_uni_llava_video_7b.sh
evaluation/scripts/llava_onevision/: llava_onevision_videomme_aks.sh  llava_onevision_videomme_uni.sh
evaluation/scripts/llava_video_7b/: longvideobench_aks_llava_video_7b.sh  longvideobench_uni_llava_video_7b.sh  videomme_aks_llava_video_7b.sh  videomme_uni_llava_video_7b.sh
